--- a/css/style.css
+++ b/css/style.css
@@ -1051,7 +1051,7 @@ display: none;
 	.space30 {
 	margin-top: 15px;
 	}
-	.first_fourth, .second_fourth, third_fourth, .fourth_fourth {
+	.first_fourth, .second_fourth, .third_fourth, .fourth_fourth {
 	width: 30%;
 	margin-right: 32px;
 	}
