--- a/css/style.css
+++ b/css/style.css
@@ -975,7 +975,7 @@ display: none;
 	width: 45%;
 	margin-right: 30px;
 	}
-	.first_third, .second_third {
+	.first_third, .second_third, .third_third {
 	width: 100%;
 	margin-right: 0px;
 	}
