--- a/css/style.css
+++ b/css/style.css
@@ -833,6 +833,13 @@ display: none;
 	}
 }
 
+@media (max-width: 650px) and (min-width: 480px) {
+	.first_fourth, .second_fourth, .third_fourth, .fourth_fourth {
+	width: 100%;
+	margin-right: 0px;
+	}
+}
+
 @media (max-width: 900px) and (min-width: 480px) {
 	.breakline {
 	display: block;
