--- a/css/style.css
+++ b/css/style.css
@@ -835,8 +835,7 @@ display: none;
 
 @media (max-width: 700px) and (min-width: 480px) {
 	.first_fourth, .second_fourth, .third_fourth, .fourth_fourth {
-	width: 100%;
-	margin-right: 30px;
+	width: 100% !important;
 	}
 }
 
