--- a/css/style.css
+++ b/css/style.css
@@ -831,6 +831,15 @@ display: none;
 	width: 110%;
 	margin-left: -25px;
 	}
+	.first_half {
+	width: 100%;
+	margin-right: 60px;
+	}
+	.second_half {
+	width: 100%;
+	margin-right: 60px;
+	margin-top: 25px;
+	}
 }
 
 @media (max-width: 700px) and (min-width: 480px) {
@@ -1008,6 +1017,15 @@ display: none;
 	.header_img {
 	width: 110%;
 	margin-left: -25px;
+	}
+	.first_half {
+	width: 100%;
+	margin-right: 60px;
+	}
+	.second_half {
+	width: 100%;
+	margin-right: 60px;
+	margin-top: 25px;
 	}
 }
 
