--- a/css/style.css
+++ b/css/style.css
@@ -840,6 +840,10 @@ display: none;
 	margin-right: 60px;
 	margin-top: 25px;
 	}
+	.fullsize {
+	width: 100%;
+	margin-right: 60px;
+	}
 }
 
 @media (max-width: 700px) and (min-width: 480px) {
@@ -1026,6 +1030,10 @@ display: none;
 	width: 100%;
 	margin-right: 60px;
 	margin-top: 25px;
+	}
+	.fullsize {
+	width: 100%;
+	margin-right: 60px;
 	}
 }
 
